Added dependencies connecting projects

--- a/CourseHub.Infrastructure/CourseHub.Infrastructure.csproj
+++ b/CourseHub.Infrastructure/CourseHub.Infrastructure.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CourseHub.Application\CourseHub.Application.csproj" />
+    <ProjectReference Include="..\CourseHub.Domain\CourseHub.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
