--- a/CourseHub.Application/CourseHub.Application.csproj
+++ b/CourseHub.Application/CourseHub.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CourseHub.Domain\CourseHub.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
