added the tables into the database

--- a/Presentation.API/appsettings.json
+++ b/Presentation.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseCH": "Data Source=localhost;User ID=app;Password=BytMig123!;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
+    "DatabaseCH": "Data Source=localhost;Database=CourseHub;User ID=sa;Password=BytMig123!;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
   }
 }
